Fix header padding, buttons size and spacing

--- a/style.scss
+++ b/style.scss
@@ -30,12 +30,12 @@ body {
 
 .header {
     display: grid;
-    grid-template: 1fr 1.5fr / 2fr 1fr;
+    grid-template: 1fr 1.5fr / 1fr 380px;
 
     position: relative;
     z-index: 2;
     grid-area: head;
-    padding: .3rem 4rem .3rem 4rem;
+    padding: .6rem 4rem .6rem 4rem;
     background-color: white;
     place-items: center start;
     @include box-shadow();
@@ -101,6 +101,7 @@ body {
 
     > :nth-child(4) {
         grid-template-columns: repeat(3, 1fr);
+        justify-items: end;
         gap: 2rem;
     }
 
@@ -305,7 +306,9 @@ body {
 
 /* CSS */
 .button-18 {
+  display: grid;
   align-items: center;
+  justify-items: center;
   background-color: $sidebar-color;
   border: 0;
   border-radius: 100px;
@@ -313,12 +316,11 @@ body {
   color: #ffffff;
   cursor: pointer;
   font-family: -apple-system, system-ui, system-ui, "Segoe UI", Roboto, "Helvetica Neue", "Fira Sans", Ubuntu, Oxygen, "Oxygen Sans", Cantarell, "Droid Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Lucida Grande", Helvetica, Arial, sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 600;
   line-height: 20px;
-  width: 120px;
-  height: 40px;
-  min-width: 0px;
+  width: 100px;
+  height: 35px;
   overflow: hidden;
   padding: 0px;
   padding-left: 20px;
